updating look-in progress

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--   my welcome message   -->
         <div id='homeContainer'>
             <div id='homeWords'>
-                <p>Welcome</p>
+                <p style="font-size: 10vh">Welcome</p>
                 <p>I'm Ashley</p>
             </div>
         </div>
@@ -45,19 +45,25 @@
             <p>Made by hand</p>
             <div id='cardsContainer'>
                 <div class='card'>
-                    <img class='card-img-bottom' src='./pictures/weather.JPG'/>
+                    <a href="https://nuggiexx.github.io/Weather/" target="_blank">
+                        <img class='card-img-bottom' src='./pictures/weather.JPG'/>
+                    </a>
                     <div class='card-body'>
                         <p class='card-text'>Want to check the weather?</p>
                     </div>
                 </div>
                 <div class='card'>
-                    <img class='card-img-bottom' src='./pictures/quotes.JPG'/>
+                    <a href="https://nuggiexx.github.io/Get-quotes/" target="_blank">
+                        <img class='card-img-bottom' src='./pictures/quotes.JPG'/>
+                    </a>
                     <div class='card-body'>
                         <p class='card-text'>Looking for a new favorite quote?</p>
                     </div>
                 </div>
                 <div class='card'>
-                    <img class='card-img-bottom' src='./pictures/wiki.JPG'/>
+                    <a href="https://nuggiexx.github.io/Wiki-Viewer/" target="_blank">
+                        <img class='card-img-bottom' src='./pictures/wiki.JPG'/>
+                    </a>
                     <div class='card-body'>
                         <p class='card-text'>Need to make a search?</p>
                     </div>
