changed to blank canvas

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div id='container'>
-        <!--   my welcome message   -->
+        <!--   my picture & welcome message   -->
         <div id='homeContainer'>
             <div id='homeWords'>
-                <p style="font-size: 10vh">Welcome</p>
+                <p>Welcome</p>
                 <p>I'm Ashley</p>
             </div>
         </div>
