--- a/index.html
+++ b/index.html
@@ -11,73 +11,11 @@
     <link href="https://fonts.googleapis.com/css?family=Sacramento|Petit+Formal+Script" rel="stylesheet">
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 </head>
+
 <body>
-    <div id='container'>
-        <!--   my picture & welcome message   -->
-        <div id='homeContainer'>
-            <div id='homeWords'>
-                <p>Welcome</p>
-                <p>I'm Ashley</p>
-            </div>
-        </div>
-
-        <!--    my skills prompt   -->
-        <div id='skillsContainer'>
-            <p>Here's a look at what I've got up my sleeve</p>
-            <div id='imgContainer'>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarbleH.png'/>
-                </div>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarbleC.png'/>
-                </div>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarblejS.png'/>
-                </div>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarblejQ.png'/>
-                </div>
-            </div>
-        </div>
-
-        <!--    my projects        -->
-        <div id='projectsContainer'>
-            <p>Made by hand</p>
-            <div id='cardsContainer'>
-                <div class='card'>
-                    <a href="https://nuggiexx.github.io/Weather/" target="_blank">
-                        <img class='card-img-bottom' src='./pictures/weather.JPG'/>
-                    </a>
-                    <div class='card-body'>
-                        <p class='card-text'>Want to check the weather?</p>
-                    </div>
-                </div>
-                <div class='card'>
-                    <a href="https://nuggiexx.github.io/Get-quotes/" target="_blank">
-                        <img class='card-img-bottom' src='./pictures/quotes.JPG'/>
-                    </a>
-                    <div class='card-body'>
-                        <p class='card-text'>Looking for a new favorite quote?</p>
-                    </div>
-                </div>
-                <div class='card'>
-                    <a href="https://nuggiexx.github.io/Wiki-Viewer/" target="_blank">
-                        <img class='card-img-bottom' src='./pictures/wiki.JPG'/>
-                    </a>
-                    <div class='card-body'>
-                        <p class='card-text'>Need to make a search?</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--      end page         -->
-        <div id='endingContainer'>
-            <p>Leaving so soon?</p>
-        </div>
-
+    <div id="main">
+        <p>Welcome</p>
     </div>
-
 
     <script src="index.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
