--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id='focusPart'>
         <p>Hello</p>
         <p>My name is<br>Ashley Hernandez</p>
+        <p>This portfolio is a work in progress, please check in later!</p>
     </div>
 
     <!--  main content on page    -->
@@ -24,7 +25,7 @@
 
         <div id='aboutMePart'> <!-- my about me -->
             <p><em>A little about me</em></p>
-            <p>I'm a self-taught web developer. I'm a student in California, and also an avid animal lover.</p>
+            <p>I'm a self-taught web developer & student in California. I'm also an avid animal lover.</p>
             <p>I love a lot of things, which include, but are not limited to:<br>Reading, Creating, Calligraphy, Making crazy new recipes</p>
         </div>
 
@@ -88,6 +89,7 @@
 
         <div id='contactPart'> <!-- contact section  -->
             <p><em>Want to talk?</em></p>
+            <p>placeholder</p>
         </div>
 
     </div> <!-- fín -->
