changing the look

--- a/index.html
+++ b/index.html
@@ -6,97 +6,15 @@
     <title>ashleyCodes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"/>    
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"/>
     <link href="https://fonts.googleapis.com/css?family=Sacramento|Petit+Formal+Script" rel="stylesheet">
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 </head>
 
 <body>
     <!--  background part of page, welcome!   -->
-    <div id='focusPart'>
         <p>Hello</p>
-        <p>My name is<br>Ashley Hernandez</p>
-        <p>This portfolio is a work in progress, please check in later!</p>
-    </div>
-
-    <!--  main content on page    -->
-    <div id='scrollyPart'>
-
-        <div id='aboutMePart'> <!-- my about me -->
-            <p><em>A little about me</em></p>
-            <p>I'm a self-taught web developer & student in California. I'm also an avid animal lover.</p>
-            <p>I love a lot of things, which include, but are not limited to:<br>Reading, Creating, Calligraphy, Making crazy new recipes</p>
-        </div>
-
-        <div id='skillsPart'> <!-- my skills section -->
-            <p><em>Here's a look at what I've got up my sleeve</em></p>
-            <div id='imgContainer'>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarbleH.png'/>
-                </div>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarbleC.png'/>
-                </div>
-                 <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarblejS.png'/>
-                </div>
-                <div id='holdPic'>
-                    <img class='pic' src='./pictures/circleMarblejQ.png'/>
-                </div>
-            </div>
-        </div>
-
-        <div id='projectsPart'> <!-- showing off my projects -->
-            <p><em>Made by hand</em></p>
-
-            <div id='cardsContainer'>
-                <div id='firstCard'>
-                    <div class='card'>
-                        <a href="https://nuggiexx.github.io/Weather/" target="_blank">
-                            <img class='card-img-bottom' src='./pictures/weather.JPG'/>
-                        </a>
-                        <div class='card-body'>
-                            <p class='card-text'>Want to check the weather?</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div id='secondCard'>
-                    <div class='card'>
-                        <a href="https://nuggiexx.github.io/Get-quotes/" target="_blank">
-                            <img class='card-img-bottom' src='./pictures/quotes.JPG'/>
-                        </a>
-                        <div class='card-body'>
-                            <p class='card-text'>Looking for a new favorite quote?</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div id='thirdCard'>
-                    <div class='card'>
-                        <a href="https://nuggiexx.github.io/Wiki-Viewer/" target="_blank">
-                            <img class='card-img-bottom' src='./pictures/wiki.JPG'/>
-                        </a>
-                        <div class='card-body'>
-                            <p class='card-text'>Need to make a search?</p>
-                        </div>
-                    </div>
-                </div>
-                
-            </div>
-        </div>
-
-        <div id='contactPart'> <!-- contact section  -->
-            <p><em>Want to talk?</em></p>
-            <p>placeholder</p>
-        </div>
-
-    </div> <!-- fín -->
+        <p>My name is<br>Ashley Hernandez</p><br>
+        <p>This portfolio is a work in progress<br>Please check in later!</p>
 
     <script src="index.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 </body>
 </html>
