Changed background photo & cleaned up HTML code

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <title>ashleyCodes</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <link href="https://fonts.googleapis.com/css?family=Sacramento|Petit+Formal+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
 </head>
 
 <body>
-    <!--  background part of page, welcome!   -->
-        <p>Hello</p>
-        <p>My name is<br>Ashley Hernandez</p><br>
+        <p>Welcome!</p>
+        <p>My name is Ashley Hernandez</p>
         <p>This portfolio is a work in progress<br>Please check in later!</p>
-
-    <script src="index.js"></script>
 </body>
 </html>
